feat: simple rest API
