# doc/api/api.yaml
@@ -7,10 +7,7 @@ info:
   contact:
     email: schetinnikov@gmail.com
 servers:
-  - description: Example Server
-    url: http://example.domain/api/v1/
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/otus55/users/1.0.0
+  - url: /
 tags:
   - name: user
     description: Operations about user
@@ -22,10 +19,9 @@ paths:
       summary: Create user
       description: This can only be done by the logged in user.
       operationId: createUser
-      responses:
-        default:
-          description: successful operation
       requestBody:
+        required: true
+        description: Created user object
         content:
           application/json:
             schema:
@@ -39,18 +35,30 @@ paths:
                   lastName: Doe
                   email: bestjohn@doe.com
                   phone: '+71002003040'
-        description: Created user object
-        required: true
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /user/{userId}:
-    parameters:
-      - name: userId
-        in: path
-        description: ID of user
-        required: true
-        schema:
-          type: integer
-          format: int64
     get:
+      parameters:
+        - name: userId
+          in: path
+          description: ID of user
+          required: true
+          schema:
+            type: integer
+            format: int64
       tags:
         - user
       description: Returns a user based on a single ID, if the user does not have access to the user
@@ -62,27 +70,48 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        default:
-          description: unexpected error
+        "400":
+          description: Bad Request
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
     delete:
-      tags:
-        - user
+      parameters:
+      - name: userId
+        in: path
+        description: ID of user
+        required: true
+        schema:
+          type: integer
+          format: int64
       description: deletes a single user based on the ID supplied
       operationId: deleteUser
       responses:
-        '204':
+        '200':
           description: user deleted
-        default:
-          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OK'
+
+        "400":
+          description: Bad Request
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+      tags:
+        - user
     put:
+      parameters:
+        - name: userId
+          in: path
+          description: ID of user
+          required: true
+          schema:
+            type: integer
+            format: int64
       tags:
         - user
       description: Update user with User ID supplied
@@ -91,7 +120,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UpdateUser'
             examples:
               sample-user:
                 summary: Example
@@ -104,8 +133,13 @@ paths:
       responses:
         '200':
           description: user updated
-        default:
-          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OK'
+
+        "400":
+          description: Bad Request
           content:
             application/json:
               schema:
@@ -116,9 +150,6 @@ components:
     User:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         username:
           type: string
           maxLength: 256
@@ -132,6 +163,45 @@ components:
         phone:
           type: string
           format: phone
+      required:
+        - username
+        - firstName
+        - lastName
+        - phone
+      example:
+        username: johndoe589
+        firstName: John
+        lastName: Doe
+        email: bestjohn@doe.com
+        phone: '+71002003040'
+    UpdateUser:
+      type: object
+      properties:
+        username:
+          type: string
+          maxLength: 256
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+          format: email
+        phone:
+          type: string
+          format: phone
+      required:
+        - username
+        - firstName
+        - lastName
+        - phone
+        - email
+      example:
+        username: johndoe589
+        firstName: John
+        lastName: Doe
+        email: bestjohn@doe.com
+        phone: '+71002003040'
     Error:
       type: object
       required:
@@ -144,13 +214,34 @@ components:
         message:
           type: string
 
-  requestBodies:
-    UserArray:
-      content:
-        application/json:
-          schema:
-            type: array
-            items:
-              $ref: '#/components/schemas/User'
-      description: List of user object
-      required: true
+    UserResponse:
+      type: object
+      required:
+        - id
+      properties:
+        id:
+          type: integer
+          format: int64
+      example:
+        id: 10
+    OK:
+      type: object
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
+#  requestBodies:
+#    UserArray:
+#      content:
+#        application/json:
+#          schema:
+#            type: array
+#            items:
+#              $ref: '#/components/schemas/User'
+#      description: List of user object
+#      required: true
